assets/css/style.css
/* ... */
#local__time {
  -webkit-box-flex: 1;
  -ms-flex: 1 0 30%;
  flex: 1 0 30%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 10px;
  font-family: "Inter", sans-serif;
  font-size: 2.6rem;
  font-weight: 400;
}

/* ----- race start time container ----- */

.start__time__container {
  height: 100%;
  -webkit-box-flex: 1;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Inter", sans-serif;
  font-size: 2.6rem;
  font-weight: 400;
}

/* ----- weather info container ----- */

.weather__info__container {
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -ms-flex: 1 0 76%;
  flex: 1 0 76%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.weather__info {
  border-radius: 10px;
  border: 2px solid #ffc929;
  margin: 24px 36px;
  padding: 16px;
  height: 240px;
  width: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  font-family: "Inter", sans-serif;
  font-size: 2.4rem;
  font-weight: 600;
}

.weather__info:hover {
  cursor: pointer;
}

.weather__info__time,
.weather__info__date {
  color: #ffc929;
}

.weather__info__temp {
  color: #ff4040;
}

.weather__info__precip,
.weather__info__rain {
  color: #509cff;
}

/* --------------- media queries --------------- */

@media (max-width: 1437px) {
  .track__info__container {
    border-right: none;
  }

  .time__info__container {
    border-left: none;
  }

  .location__info__container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    padding: 0;
  }

  .location__time__container {
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #ffc929;
  }

  .start__time__container {
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
  }

  #location {
    -webkit-box-flex: 1;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
  }

  #local__time {
    -webkit-box-flex: 1;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
  }

  .weather__info {
    margin: 16px 16px;
    padding: 10px;
    height: 220px;
    font-size: 2.2rem;
  }
}

@media (max-width: 1240px) {
  .race__countdown__timer__container {
    padding: 12px;
    font-size: 2.4rem;
  }

  .weather__title__container {
    font-size: 2.6rem;
  }

  #location {
    font-size: 2.2rem;
  }

  #local__time {
    font-size: 2.2rem;
  }

  .start__time__container {
    font-size: 2.2rem;
  }
}

@media (max-width: 1110px) {
  .race__countdown__timer__container {
    padding: 8px;
    font-size: 2rem;
  }

  .track__name {
    font-size: 2.2rem;
  }

  .weather__title__container {
    padding-bottom: 8px;
    padding-top: 8px;
    font-size: 2.4rem;
  }

  #location {
    font-size: 2rem;
  }

  #local__time {
    font-size: 2rem;
  }

  .start__time__container {
    font-size: 2rem;
  }
}

@media (max-width: 1133px) {
  .race__countdown__timer__container {
    font-size: 2.2rem;
  }
}

@media (max-width: 1055px) {
  .race__countdown__timer__container {
    font-size: 2.1rem;
  }
}

/* smaller screen size media queries with collapsed race calendar start here */

@media (max-width: 1025px) {
  .main__homepage__container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .race__calendar__container {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 0px;
    flex: 0 0 0px;
  }

  .race__events {
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border-right: none;
    padding: 10px 0px;
    font-size: 2rem;
  }

  .hamburger__icon__container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-left: 6%;
    cursor: pointer;
  }

  .hamburger__icon {
    color: #509cff;
    padding: 0;
    font-size: 2.6rem;
  }

  .event__location {
    white-space: normal;
    margin-left: 6%;
  }

  .event__date {
    white-space: normal;
    margin-right: 6%;
  }

  .button__dashboard__container {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
  }

  .track__info__container {
    display: none;
    border-bottom: none;
  }

  .track__stats {
    border-bottom: 1px solid #ffc929;
  }

  .time__info__container {
    display: none;
    border-bottom: none;
  }

  .track__name {
    font-size: 2.6rem;
  }

  .weather__title__container {
    padding-bottom: 8px;
    padding-top: 8px;
    font-size: 2.8rem;
  }

  #location {
    font-size: 2.2rem;
  }

  #local__time {
    font-size: 2.2rem;
  }

  .start__time__container {
    font-size: 2.2rem;
  }
}

@media (max-width: 866px) {
  .race__countdown__timer__container {
    padding: 6px 8px;
    font-size: 2rem;
  }
}

@media (max-width: 811px) {
  .race__countdown__timer__container {
    font-size: 1.9rem;
  }
}
/* ... */

